--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">TestAppBalinaSoft</string>
-    <string name="drawer_open">ткрыть</string>
-    <string name="drawer_close">закрыть</string>
-    <string name="search">поиск</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="drawer_open">Открыть</string>
+    <string name="drawer_close">Закрыть</string>
+    <string name="search">Поиск</string>
+
 
     <string name="navigation_drawer_open">Открыть боковую панель</string>
     <string name="navigation_drawer_close">Закрыть боковую панель</string>
@@ -11,8 +11,35 @@
     <string name="catalog">Каталог</string>
     <string name="action_settings">Settings</string>
     <string name="progress_dialog_title">Загрузка</string>
-    <string name="progress_dialog_message"></string>
-    <string name="title_activity_maps">Map</string>
+    <string name="progress_dialog_message">Подождите... Загрузка данных</string>
+    <string name="offer_price">Цена:</string>
+
+
+    <!--Contacts fragment-->
+    <string name="our_adress">Адреса заведений:</string>
+    <string name="user_position_marker">Вы здесь</string>
+    <string name="farfor_positiom_marker">А мы тут</string>
+
+    <string name="farfor_tel">+375298803542</string>
+
+   <string name="farfor_address1">ул. Озeрная, 49, Калининград,
+        Калининградская обл., Россия, 236029</string>
+    <string name="farfor_addres1_lat">54.742380</string>
+    <string name="farfor_addres1_lng">20.512510</string>
+
+    <string name="farfor_address2">ул. Советских пограничникав
+        110a, Гродно, Беларусь</string>
+    <string name="farfor_addres2_lat">53.672086</string>
+    <string name="farfor_addres2_lng">23.799021</string>
+
+
+    <string name="farfor_address3">ул. Кульман 5б, Минск, Беларусь, 220013</string>
+    <string name="farfor_addres3_lat">53.918854</string>
+    <string name="farfor_addres3_lng">27.581049</string>
+
+    <string name="farfor_address4">ул. Жилуновича 4, Минск, Беларусь 220026</string>
+    <string name="farfor_addres4_lat">53.876301</string>
+    <string name="farfor_addres4_lng">27.630033</string>
 
 
 </resources>
